[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/sample_scene.gd" type="Script" id=1]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/bar/background.png" type="Texture" id=3]
[ext_resource path="res://ui/bar/foreground.png" type="Texture" id=4]
[ext_resource path="res://src/live_audio.gd" type="Script" id=5]
[ext_resource path="res://src/device_selection.gd" type="Script" id=6]
[ext_resource path="res://ui/background.png" type="Texture" id=7]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="sample_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="content" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="mic_input" type="AudioStreamPlayer" parent="content"]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="recording_player" type="AudioStreamPlayer" parent="content"]

[node name="ui" type="HBoxContainer" parent="content"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 712.0

[node name="recording_controls" type="VBoxContainer" parent="content/ui"]
margin_right = 396.0
margin_bottom = 696.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="device_selection" type="OptionButton" parent="content/ui/recording_controls"]
margin_right = 396.0
margin_bottom = 44.0
text = "Device"
clip_text = true
script = ExtResource( 6 )

[node name="sep2" type="HSeparator" parent="content/ui/recording_controls"]
margin_top = 76.0
margin_right = 396.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record_button" type="Button" parent="content/ui/recording_controls"]
margin_top = 116.0
margin_right = 396.0
margin_bottom = 160.0
text = "Start recording"

[node name="play_button" type="Button" parent="content/ui/recording_controls"]
margin_top = 192.0
margin_right = 396.0
margin_bottom = 236.0
text = "Play audio"

[node name="sep" type="HSeparator" parent="content/ui/recording_controls"]
margin_top = 268.0
margin_right = 396.0
margin_bottom = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_name" type="LineEdit" parent="content/ui/recording_controls"]
margin_top = 308.0
margin_right = 396.0
margin_bottom = 352.0
placeholder_text = "Save name"

[node name="save_button" type="Button" parent="content/ui/recording_controls"]
margin_top = 384.0
margin_right = 396.0
margin_bottom = 428.0
text = "save to wav"

[node name="sep" type="VSeparator" parent="content/ui"]
margin_left = 428.0
margin_right = 436.0
margin_bottom = 696.0

[node name="live_audio" type="VBoxContainer" parent="content/ui"]
margin_left = 468.0
margin_right = 1248.0
margin_bottom = 696.0
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="monitors" type="HBoxContainer" parent="content/ui/live_audio"]
margin_right = 780.0
margin_bottom = 580.0
size_flags_vertical = 3

[node name="volume_monitor" type="VBoxContainer" parent="content/ui/live_audio/monitors"]
margin_right = 357.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="volume_bar" type="TextureProgress" parent="content/ui/live_audio/monitors/volume_monitor"]
margin_left = 158.0
margin_right = 198.0
margin_bottom = 444.0
size_flags_horizontal = 4
size_flags_vertical = 3
max_value = 1.0
step = 0.01
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 20
stretch_margin_top = 20
stretch_margin_right = 20
stretch_margin_bottom = 20

[node name="volume_value" type="Label" parent="content/ui/live_audio/monitors/volume_monitor"]
margin_top = 476.0
margin_right = 357.0
margin_bottom = 512.0
text = "0.0db"
align = 1

[node name="volume_label" type="Label" parent="content/ui/live_audio/monitors/volume_monitor"]
margin_top = 544.0
margin_right = 357.0
margin_bottom = 580.0
text = "Approx. Volume"
align = 1

[node name="frequency_monitor" type="VBoxContainer" parent="content/ui/live_audio/monitors"]
margin_left = 389.0
margin_right = 780.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bars" type="VBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor"]
margin_right = 391.0
margin_bottom = 512.0
size_flags_vertical = 3

[node name="20000" type="HBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor/bars"]
margin_right = 391.0
margin_bottom = 36.0
size_flags_vertical = 3

[node name="bar" type="ColorRect" parent="content/ui/live_audio/monitors/frequency_monitor/bars/20000"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor/bars/20000"]
margin_left = 232.0
margin_right = 332.0
margin_bottom = 36.0
text = "20 kz"

[node name="10000" type="HBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor/bars"]
margin_top = 68.0
margin_right = 391.0
margin_bottom = 104.0
size_flags_vertical = 3

[node name="bar" type="ColorRect" parent="content/ui/live_audio/monitors/frequency_monitor/bars/10000"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor/bars/10000"]
margin_left = 232.0
margin_right = 324.0
margin_bottom = 36.0
text = "10 kz"

[node name="5000" type="HBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor/bars"]
margin_top = 136.0
margin_right = 391.0
margin_bottom = 172.0
size_flags_vertical = 3

[node name="bar" type="ColorRect" parent="content/ui/live_audio/monitors/frequency_monitor/bars/5000"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor/bars/5000"]
margin_left = 232.0
margin_right = 309.0
margin_bottom = 36.0
text = "5 kz"

[node name="2500" type="HBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor/bars"]
margin_top = 204.0
margin_right = 391.0
margin_bottom = 240.0
size_flags_vertical = 3

[node name="bar" type="ColorRect" parent="content/ui/live_audio/monitors/frequency_monitor/bars/2500"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor/bars/2500"]
margin_left = 232.0
margin_right = 343.0
margin_bottom = 36.0
text = "2.5 kz"

[node name="1000" type="HBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor/bars"]
margin_top = 272.0
margin_right = 391.0
margin_bottom = 308.0
size_flags_vertical = 3

[node name="bar" type="ColorRect" parent="content/ui/live_audio/monitors/frequency_monitor/bars/1000"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor/bars/1000"]
margin_left = 232.0
margin_right = 301.0
margin_bottom = 36.0
text = "1 kz"

[node name="500" type="HBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor/bars"]
margin_top = 340.0
margin_right = 391.0
margin_bottom = 376.0
size_flags_vertical = 3

[node name="bar" type="ColorRect" parent="content/ui/live_audio/monitors/frequency_monitor/bars/500"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor/bars/500"]
margin_left = 232.0
margin_right = 355.0
margin_bottom = 36.0
text = "500 hz"

[node name="250" type="HBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor/bars"]
margin_top = 408.0
margin_right = 391.0
margin_bottom = 444.0
size_flags_vertical = 3

[node name="bar" type="ColorRect" parent="content/ui/live_audio/monitors/frequency_monitor/bars/250"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor/bars/250"]
margin_left = 232.0
margin_right = 355.0
margin_bottom = 36.0
text = "250 hz"

[node name="100" type="HBoxContainer" parent="content/ui/live_audio/monitors/frequency_monitor/bars"]
margin_top = 476.0
margin_right = 391.0
margin_bottom = 512.0
size_flags_vertical = 3

[node name="bar" type="ColorRect" parent="content/ui/live_audio/monitors/frequency_monitor/bars/100"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor/bars/100"]
margin_left = 232.0
margin_right = 347.0
margin_bottom = 36.0
text = "100 hz"

[node name="frequency_label" type="Label" parent="content/ui/live_audio/monitors/frequency_monitor"]
margin_top = 544.0
margin_right = 391.0
margin_bottom = 580.0
text = "Frequency strength"
align = 1

[node name="sep" type="HSeparator" parent="content/ui/live_audio"]
margin_top = 612.0
margin_right = 780.0
margin_bottom = 620.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="HBoxContainer" parent="content/ui/live_audio"]
margin_top = 652.0
margin_right = 780.0
margin_bottom = 696.0

[node name="samples_control" type="HBoxContainer" parent="content/ui/live_audio/controls"]
margin_right = 325.0
margin_bottom = 44.0

[node name="samples_label" type="Label" parent="content/ui/live_audio/controls/samples_control"]
margin_top = 4.0
margin_right = 165.0
margin_bottom = 40.0
text = "Samples"
align = 1

[node name="samples_spinbox" type="SpinBox" parent="content/ui/live_audio/controls/samples_control"]
margin_left = 197.0
margin_right = 325.0
margin_bottom = 44.0
min_value = 1.0
max_value = 50.0
value = 10.0
rounded = true

[node name="amplification_control" type="HBoxContainer" parent="content/ui/live_audio/controls"]
margin_left = 357.0
margin_right = 780.0
margin_bottom = 44.0

[node name="amp_label" type="Label" parent="content/ui/live_audio/controls/amplification_control"]
margin_top = 4.0
margin_right = 263.0
margin_bottom = 40.0
text = "Amplification"
align = 1

[node name="amp_spinbox" type="SpinBox" parent="content/ui/live_audio/controls/amplification_control"]
margin_left = 295.0
margin_right = 423.0
margin_bottom = 44.0
max_value = 5.0
step = 0.2
value = 1.0

[connection signal="item_selected" from="content/ui/recording_controls/device_selection" to="content/ui/recording_controls/device_selection" method="_on_device_selection_item_selected"]
[connection signal="pressed" from="content/ui/recording_controls/record_button" to="content" method="_on_record_button_pressed"]
[connection signal="pressed" from="content/ui/recording_controls/play_button" to="content" method="_on_play_button_pressed"]
[connection signal="pressed" from="content/ui/recording_controls/save_button" to="content" method="_on_save_button_pressed"]
